services/krakend-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: krakend-dev
  labels:
    name: krakend-dev
    environment: dev
